create application base class
    app::Application is the base class where everything branches off

--- a/meson.build
+++ b/meson.build
@@ -17,7 +17,7 @@ cmake_opt_glfw.add_cmake_defines({'GLFW_BUILD_DOCS': false})
 cmake_opt_glfw.add_cmake_defines({'GLFW_BUILD_TESTS': false})
 cmake_opt_glfw.add_cmake_defines({'GLFW_BUILD_EXAMPLES': false})
 cmake_opt_glfw.add_cmake_defines({'GLFW_USE_WAYLAND': false})
-cmake_opt_glfw.add_cmake_defines({'GLFW_VULKAN_STATIC': true})
+cmake_opt_glfw.add_cmake_defines({'GLFW_VULKAN_STATIC': false})
 cmake_opt_glfw.add_cmake_defines({'CMAKE_BUILD_TYPE': 'Release'})
 cmake_opt_glfw.set_override_option('warning_level', '0')
 cmake_opt_glfw.set_override_option('werror', 'false')
@@ -53,8 +53,12 @@ cpp_compile_args = [
   # for GLM, TODO make this per-project compile argument
   '-Wno-deprecated-volatile']
 
+cpp_link_args = [
+  '-ldl']
+
 sources = []
 unittest_sources = []
+
 subdir('data')
 subdir('src')
 subdir('unittests')
@@ -62,7 +66,8 @@ subdir('unittests')
 executable('mysummerjob', sources,
   include_directories : inc,
   dependencies : build_deps,
-  cpp_args : cpp_compile_args)
+  cpp_args : cpp_compile_args,
+  link_args : cpp_link_args)
 
 executable('tests', unittest_sources,
   include_directories : inc,
