--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Deps
-        run: python3 -m pip install meson ninja
-
-        # GLFW requres these for X11 builds
-        # run: apt install xorg-dev libglu1-mesa-dev
+        run: sudo apt-get install xorg-dev libglu1-mesa-dev && python3 -m pip install meson ninja
 
       # Build step
       - name: Build
@@ -38,6 +35,6 @@ jobs:
           cd build
           ninja tests
 
-      - name: Run Unittests
-        run: ./tests
+      - name: Test
+        run: ./build/tests
 
