eventsystem: add eventsystem

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "subprojects/glfw"]
 	path = subprojects/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "subprojects/threadpool"]
+	path = subprojects/threadpool
+	url = https://github.com/ConorWilliams/Threadpool.git
