--- a/meson.build
+++ b/meson.build
@@ -26,6 +26,7 @@ cmake_opt_glfw.set_override_option('werror', 'false')
 catch2 = subproject('catch2')
 glfw_subpro = cmake.subproject('glfw', options : cmake_opt_glfw)
 glm = subproject('glm')
+riftenpool_subpro = cmake.subproject('threadpool')
 spdlog = subproject('spdlog')
 vulkan_headers = subproject('vulkan-headers')
 vulkan_validationlayers = subproject('vulkan-validationlayers')
@@ -34,6 +35,7 @@ vulkan_validationlayers = subproject('vulkan-validationlayers')
 build_deps = []
 build_deps += glfw_subpro.dependency('glfw')
 build_deps += glm.get_variable('glm_dep')
+build_deps += riftenpool_subpro.dependency('RiftenThiefpool')
 build_deps += spdlog.get_variable('spdlog_dep')
 build_deps += vulkan_headers.get_variable('vulkan_headers_dep')
 build_deps += vulkan_validationlayers.get_variable('vulkan_validationlayers_dep')
@@ -41,6 +43,8 @@ build_deps += vulkan_validationlayers.get_variable('vulkan_validationlayers_dep'
 unittest_deps = []
 unittest_deps += catch2.get_variable('catch2_dep')
 unittest_deps += glm.get_variable('glm_dep')
+unittest_deps += riftenpool_subpro.dependency('RiftenThiefpool')
+unittest_deps += spdlog.get_variable('spdlog_dep')
 
 ## Include directories ##
 inc = []
