--- a/unittests/meson.build
+++ b/unittests/meson.build
@@ -1,3 +1,6 @@
 unittest_sources += files(
   'glm_sanity_check.cpp',
+  'threadpool.cpp',
+  'subsystemtests.cpp',
+  'singletonpattern.cpp',
   'utilityfunctions.cpp')
