vulkan: add base vulkan rendering infrastructure

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,5 +1,13 @@
+subdir('shaders')
 
 # Copy config file to build directory
-configure_file(input : 'config.ini',
+configure_file(
+  input : 'config.ini',
   output : 'config.ini',
   copy : true)
+
+# configure_file(
+  # input : 'models/*',
+  # output : 'models/',
+  # copy : true)
+
