--- a/src/core/meson.build
+++ b/src/core/meson.build
@@ -1,2 +1,13 @@
 sources += files(
+  'userinputhandler.cpp',
+  'eventqueue.cpp',
   'subsystemregistry.cpp')
+
+unittest_sources += files(
+  'subsystemregistry.cpp',
+  'eventqueue.cpp')
+
+subdir('model')
+subdir('scene')
+subdir('texture')
+subdir('vulkan')
