--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Deps
-        run: sudo apt-get install xorg-dev libglu1-mesa-dev gcc-10 g++-10 && python3 -m pip install meson ninja
+        run: sudo apt-get install xorg-dev libglu1-mesa-dev gcc-10 g++-10 glslang-tools && python3 -m pip install meson ninja
 
       # Build step
       - name: Build
