--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "subprojects/threadpool"]
 	path = subprojects/threadpool
 	url = https://github.com/ConorWilliams/Threadpool.git
+[submodule "subprojects/entt"]
+	path = subprojects/entt
+	url = https://github.com/skypjack/entt.git
