--- a/unittests/meson.build
+++ b/unittests/meson.build
@@ -1,6 +1,7 @@
 unittest_sources += files(
   'glm_sanity_check.cpp',
   'threadpool.cpp',
+  'multicasttests.cpp',
   'subsystemtests.cpp',
   'singletonpattern.cpp',
   'utilityfunctions.cpp')
