imgui: add as external deps
    there was configuration problems on some platforms with glfw

--- a/data/meson.build
+++ b/data/meson.build
@@ -9,10 +9,10 @@ configure_file(
 model_source = join_paths(meson.source_root(), 'data/models')
 model_dest = join_paths(meson.build_root(), 'data/models')
 message('copying @0@ to @1@ ...'.format(model_source, model_dest))
-r = run_command('cp', model_source, model_dest)
+r = run_command('cp', '-r', model_source, model_dest)
 
 font_source = join_paths(meson.source_root(), 'data/fonts')
 font_dest = join_paths(meson.build_root(), 'data/fonts')
 message('copying @0@ to @1@ ...'.format(font_source, font_dest))
-r = run_command('cp', font_source, font_dest)
+r = run_command('cp', '-r', font_source, font_dest)
 
