--- a/unittests/meson.build
+++ b/unittests/meson.build
@@ -1,7 +1,6 @@
 unittest_sources += files(
   'glm_sanity_check.cpp',
   'threadpool.cpp',
-  'multicasttests.cpp',
-  'subsystemtests.cpp',
+  'signalslottests.cpp',
   'singletonpattern.cpp',
   'utilityfunctions.cpp')
