clean imgui setup

--- a/src/core/vulkan/meson.build
+++ b/src/core/vulkan/meson.build
@@ -2,7 +2,7 @@ sources += files(
   'context.cpp',
   'debugutils.cpp',
   'descriptorgen.cpp',
-  'uilayer.cpp',
+  'imguisetup.cpp',
   'swapchain.cpp',
   'utils.cpp',
   'device.cpp')
