add event dispatchertests

--- a/unittests/meson.build
+++ b/unittests/meson.build
@@ -2,5 +2,6 @@ unittest_sources += files(
   'glm_sanity_check.cpp',
   'threadpool.cpp',
   'signalslottests.cpp',
+  'dispatchertests.cpp',
   'singletonpattern.cpp',
   'utilityfunctions.cpp')
